force-app/main/default/objects/Navigator_Layout__c/Navigator_Layout__c.object-meta.xml
<CustomObject>
    <label>Navigator Layout</label>
    <pluralLabel>Navigator Layouts</pluralLabel>
    <description
  >One saved Salesforce Navigator layout, owned by the user it belongs to. OWD is Private and "Grant Access Using Hierarchies" is off, so no manager above the owner in the role hierarchy can read their reports' layouts.</description>
    <nameField>
        <label>Layout Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>