force-app/main/default/objects/Navigator_Layout__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <description
  >Marks the one layout the Navigator renders for this user. Exactly-one-active is enforced by NavigatorLayoutController, which clears the flag on the owner's other layouts in the same transaction as it sets this one.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>