force-app/main/default/objects/Navigator_Layout__c/fields/Layout_JSON__c.field-meta.xml
<CustomField>
    <fullName>Layout_JSON__c</fullName>
    <label>Layout JSON</label>
    <description
  >The layout's sections, each with a name, a column count and an ordered list of {id, rename?}. Carries no tab labels, icons or pageReferences — everything derivable from the platform is derived at render time, so an org relabelling a tab propagates with no write.</description>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>