force-app/main/default/objects/Navigator_Layout__c/fields/Schema_Version__c.field-meta.xml
<CustomField>
    <fullName>Schema_Version__c</fullName>
    <label>Schema Version</label>
    <description
  >The version of the Layout_JSON__c payload shape held on this row. The platform will not migrate the inside of a Long Text Area across a package upgrade, so the reader dispatches on this number rather than guessing at the payload's shape.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>