force-app/main/default/objects/Navigator_Layout__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <description
  >Position of this layout in the user's layout switcher.</description>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>